# gpio-rest

./: .gitignore  Cargo.toml  README.md  config.json  install_service.sh
ops/: gpio-rest.service  ha_configuration_segment.yml
src/: main.rs
