[package]
name = "gpio-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
gpio = "0.4.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
